[package]
name = "typemapvec"
description = "A special HashMap capable of holding an arbitrary number of Vectors of different types."
homepage = "https://github.com/Oxey405/typemapvec-rs"
repository = "https://github.com/Oxey405/typemapvec-rs"
readme="readme.md"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
